# AI-Observability-Platform

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  index.html
.github/workflows/: ci.yml
collector/: Dockerfile  requirements.txt
collector/app/: database.py  main.py
collector/app/models/: __init__.py
collector/app/routers/: events.py  health.py  metrics.py  scores.py
dashboard/provisioning/dashboards/: accuracy.json  dashboards.yml  overview.json
dashboard/provisioning/datasources/: postgres.yml
docs/examples/: custom_exporter.py  local_sdk_demo.py
docs/examples/fastapi/: example.py
docs/examples/openai/: example.py
sdk/: pyproject.toml
sdk/ai_obs/: __init__.py  client.py  config.py  decorator.py  registry.py  scoring.py
sdk/ai_obs/exporters/: __init__.py  base.py
sdk/ai_obs/middleware/: __init__.py
sdk/ai_obs/providers/: __init__.py
sdk/tests/: test_sdk.py
storage/migrations/: init.sql
